--- a/curso.html
+++ b/curso.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Bienvenido al Curso de Programación Web</h1>
-        <p>Este es un curso introductorio sobre el desarrollo de páginas web utilizando HTML, CSS y JavaScript.</p>
+        <p>Este es un curso aprendera que son y la utilizacion de HTML, CSS y JavaScript para la creacion de paginas web.</p>
     </header>
 
     <section>
@@ -25,7 +25,7 @@
         <p><a href="https://www.w3schools.com" target="_blank">W3Schools - Tutoriales de Programación Web</a></p>
 
         <h3>Imágenes:</h3>
-        <img src="imagen-curso.jpg" alt="Imagen del Curso" width="300" />
+        <img src="imagenes/UMG.jpg" alt="Imagen del Curso" width="300" />
 
         <h3>Videos:</h3>
         <div>
