--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Usuario o contraseña incorrectos
       </div>
     </div>
-
+ <img src="imagenes/UMG.jpg" alt="Imagen del Curso" width="300" />
     <script src="script.js"></script>
   </body>
 </html>
