--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Institución Educativa - Curso</title>
+    <title> Universidad Mariano Galvez - Curso de programación</title>
+    <img src="imagenes/UMG.jpg" alt="Imagen del Curso" width="300" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -20,7 +21,7 @@
         Usuario o contraseña incorrectos
       </div>
     </div>
- <img src="imagenes/UMG.jpg" alt="Imagen del Curso" width="300" />
+ 
     <script src="script.js"></script>
   </body>
 </html>
