--- a/curso.html
+++ b/curso.html
@@ -21,7 +21,7 @@
             <li>Optener una mayor comprensión de los temas</li>
         </ul>
          
-        >Si desea aprender mas sobre el tema fuera del curso puede hacerlo desde aqui.</p>
+        <p>Si desea aprender mas sobre el tema fuera del curso puede hacerlo desde aqui.</p>
         <p><a href="https://www.w3schools.com" target="_blank">W3Schools - Tutoriales de Programación Web</a></p>
         <p><a href="https://app.site123.com/manager/affiliate/abLandingOutsource.php?subject=&a=1&c_h=By+far+the+easiest+free+website+builder&utm_source=google&utm_medium=cpc&utm_campaign=17160938340&utm_adgroupID=137296782918&keyword=building%20a%20website&matchtype=p&network=g&placment=&target=&gad_source=1&gclid=Cj0KCQiAi_G5BhDXARIsAN5SX7oZSmkKO4wiTLa3RLRbyILS_SLYRD0HuX4viMSWsWUesB2wHJg8qcUaAlgoEALw_wcB&l=en&landingSystem=1" target="_blank">SITE123 - Creador depaginas Web</a></p>
 
