--- a/curso.html
+++ b/curso.html
@@ -31,21 +31,21 @@
         <h3>Videos introductorios :</h3>
         <div>
               <p> informacion de HTML.</p>
-             <img src="imagenes/html.jpg" alt="Imagen html" width="300" />
+             <img src="imagenes/html.png" alt="Imagen html" width="300" />
             <!-- Video 1 -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/10GHKjgQIR0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div>
                <p> informacion de JavaScript.</p>
-             <img src="imagenes/js.jpg" alt="Imagen javascrip" width="300" />
+             <img src="imagenes/js.png" alt="Imagen javascrip" width="300" />
             <!-- Video 2 -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/riZbwRFMFuw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div>
             <p> informacion de CSS.</p>
-             <img src="imagenes/css.jpg" alt="Imagen css" width="300" />
+             <img src="imagenes/css.png" alt="Imagen css" width="300" />
             <!-- Video 3 -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/8cSo0ijtkzU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
