--- a/curso.html
+++ b/curso.html
@@ -47,39 +47,11 @@
         </div>
     </section>
 
-    <section>
-        <h2>Evaluación</h2>
-        <form id="evaluacion-form" onsubmit="return calificar()">
-            <p>1. ¿Qué es HTML?</p>
-            <input type="radio" name="pregunta1" value="a" id="html1"><label for="html1"> Lenguaje de programación</label><br>
-            <input type="radio" name="pregunta1" value="b" id="html2"><label for="html2"> Lenguaje de marcado</label><br>
-            <input type="radio" name="pregunta1" value="c" id="html3"><label for="html3"> Sistema operativo</label><br>
-
-            <p>2. ¿Qué etiqueta se usa para insertar imágenes?</p>
-            <input type="radio" name="pregunta2" value="a" id="img1"><label for="img1">&lt;image&gt;</label><br>
-            <input type="radio" name="pregunta2" value="b" id="img2"><label for="img2">&lt;img&gt;</label><br>
-
-            <p>3. Selecciona los lenguajes usados para el desarrollo web:</p>
-            <input type="checkbox" name="pregunta3" value="html" id="html"><label for="html"> HTML</label><br>
-            <input type="checkbox" name="pregunta3" value="css" id="css"><label for="css"> CSS</label><br>
-            <input type="checkbox" name="pregunta3" value="js" id="js"><label for="js"> JavaScript</label><br>
-
-            <p>4. ¿Qué es JavaScript?</p>
-            <select name="pregunta4" id="js_select">
-                <option value="a">Lenguaje de programación</option>
-                <option value="b">Estilo para páginas web</option>
-                <option value="c">Editor de código</option>
-            </select>
-
-            <p>5. ¿Para qué sirve CSS?</p>
-            <textarea name="pregunta5" id="css_textarea"></textarea>
-
-            <br>
-            <button type="submit">Enviar Respuestas</button>
-        </form>
-
-        <div id="resultado"></div>
-    </section>
+ <section>
+    <h2>Evaluación</h2>
+    <p>Para realizar el examen, haz clic en el siguiente enlace:</p>
+    <a href="examen.html">Ir al examen</a>
+</section>
 
     <script src="script.js"></script>
 </body>
