--- a/examen.html
+++ b/examen.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Examen - Curso de Programación Web</title>
+    <title>Examen del Curso</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Examen del Curso de Programación Web</h1>
-        <p>Responde las siguientes preguntas sobre lo aprendido en el curso.</p>
+        <p>Responde las preguntas para evaluar tus conocimientos adquiridos en el curso.</p>
     </header>
 
     <section>
@@ -44,6 +44,10 @@
         </form>
 
         <div id="resultado"></div>
+
+        <!-- Botón para regresar al curso -->
+        <br>
+        <button onclick="window.location.href='curso.html'">Regresar al Curso</button>
     </section>
 
     <script src="script.js"></script>
